--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         docker build -t muneebdocker/chat-app:latest .
         echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-        docker push username/chat-app:latest
+        docker push muneebdocker/chat-app:latest
 
     - name: Deploy to EC2 Kubernetes
       env:
